overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
     align-items: center;
     justify-content: center;
     font-family: "Poppins", "almarai", sans-serif;
+    overflow: hidden;
 }
 
 .coming-soon {
